--- a/AbrilHD.ipynb
+++ b/AbrilHD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrBAApSanhcgsh/Gm3Po7S",
+      "authorship_tag": "ABX9TyNRJ3vu+wOATqBYIOqGp5pu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,37 +64,25 @@
       "cell_type": "code",
       "source": [
         "print(\"Ingresa tu nombre\")\n",
-        "n=(imput(\"Captura tu nombre\"))\n",
-        "p=(imput(\"Captura tu nombre paterno\"))\n",
-        "m=(imput(\"captura tu nombre materno\"))\n",
+        "n=(input(\"Captura tu nombre\"))\n",
+        "p=(input(\"Captura tu nombre paterno\"))\n",
+        "m=(input(\"captura tu nombre materno\"))\n",
         "print(n+p+m)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
+          "base_uri": "https://localhost:8080/"
         },
         "id": "cDwTfMTc1pVZ",
-        "outputId": "74f305eb-7753-4175-8dca-3d344af7ca36"
+        "outputId": "d8b0a077-e328-4e6f-d974-e13ee57c79bd"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Ingresa tu nombre\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'imput' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2332757839.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Ingresa tu nombre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Captura tu nombre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Captura tu nombre paterno\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"captura tu nombre materno\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'imput' is not defined"
           ]
         }
       ]
